<resources>

    <string name="app_name">Mathree</string>
    <!-- Главное меню -->
    <string name="start">Начать</string>
    <string name="clearData">Стереть данные</string>
    <string name="Authors">Создатели игры</string>

    <!-- Создание персонажа -->
    <string name="warrior">Воин</string>
    <string name="warriorDesc">Сильный и могучий воин полагается на недюжинную силу. Зачем нужны подлые приёмы, и заумные заклинания, если любую защиту может сокрушить достаточно тяжелая дубина?</string>
    <string name="wizard">Волшебник</string>
    <string name="wizardDesc">Мастер волшебных заклинаний. Способен во мгновение ока заморозить своих врагов, и в тот же момент забросать их огненными шарами, в чём ему очень сильно помогает его высокий интеллект.</string>
    <string name="rogue">Плут</string>
    <string name="rogueDesc">Ловкий плут, умеющий сражаться как в дальнем, так и в ближнем бою, полагается преимущественно на хитрые уловки и подлые приёмы, с чем ему очень сильно помогает его отличная ловкость.</string>
    <string name="chooseClassTW">Класс персонажа</string>
    <string name="writeName">Имя персонажа</string>
    <string name="writeHint">Populous the brave</string>
    <string name="createChar">Создать</string>
    <string name="classDesc">Описание класса</string>

    <string name="deathText1">Ваше тело слабеет, вы чувствуете, как начинаете растворяться в пространстве, как и все монстры, которых вы победили ранее...</string>
    <string name="deathText2">Но прямо перед тем, как ваше сознание затухает во мраке бытия, вы видите свет, яркий свет, что же это значит?</string>
    <string name="deathText3">Вы появляетесь внутри замка Mathree, перед вами сидит старик, который просто светится... Буквально. Он смотрит на вас, после чего начинает говорить: "Хе-хе, вы, молодняк, совсем выживать не умеете, давай-ка я покажу, как пользоваться этой энергией, которую ты собрал по пути сюда. Это поможет тебе."</string>

    <string name="statShop">Ты хочешь стать сильнее? Умнее? Ловче? Хе-хе...
    Но у всего есть цена. Принеси мне эссенцию, и я превращу тебя в лучшую версию себя.</string>
</resources>

